# Hub

./: .env.example  .vercelignore  AGENTS.md  README.md  deno.json  package-lock.json  package.json  setup.bat  setup.js  setup.sh  vite.config.js  webpack.mix.js
app/Models/: Address.php  AddressResponse.php  AddressSearch.php  AddressSearchAddress.php  Soul.php  SoulClient.php  User.php
app/Providers/: AppServiceProvider.php
app/Services/: SatisfactoryAlternateRecipeStore.php
bootstrap/: app.php
config/: cors.php  services.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2024_08_03_094755_create_address_searches_table.php  2024_08_03_095430_create_addresses_table.php  2024_08_03_101501_create_address_responses_table.php  2024_08_03_103809_create_address_search_addresses_table.php  2024_08_03_103809_create_address_searches_addresses_table.php  2024_08_05_122918_create_souls_table.php  2024_08_08_094823_create_soul_clients_table.php  2024_08_17_064557_add_role_to_users_table.php  2024_08_28_115058_add_user_to_soul_clients_table.php  2024_09_25_010834_create_satisfactory_items_table.php  2024_09_25_011833_create_satisfactory_machines_table.php
database/seeders/: DatabaseSeeder.php  SoulSeeder.php
lang/: en.json  ru.json
lang/en/: main.json  response.php
lang/ru/: main.json  response.php
public/recepiesRust/: recepiesHtmlJsonToRecepies.js  recipes1.json  translatedRecipes.json
public/recipeParser/: config.json  sat.py  (+1 more)
public/rustParser/: .gitignore  Cargo.toml  README.md  notes.txt
public/rustParser/src/: main.rs
routes/: web.php
(+133 files in other folders)
